--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "build-prod": "webpack --mode=production",
     "watch": "webpack --watch",
-    "format": "prettier --write \"./src/**/*.{ts,tsx}\""
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -30,6 +31,10 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "eslint": "^7.9.0",
+    "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
