--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -24,6 +25,7 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
