--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --open --history-api-fallback --https --port 30443",
+    "start": "webpack-dev-server --open --https --port 30443",
     "build": "webpack",
     "build-prod": "webpack --mode=production",
     "watch": "webpack --watch",
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/node": "^14.6.0",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
