--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recharts": "^1.8.16",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
