--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.16.1",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^14.6.0",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.47",
