--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.10",
     "@types/date-fns": "^2.6.0",
     "@types/node": "^14.6.0",
