--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "start": "webpack-dev-server --open --https --port 30443",
-        "build": "webpack",
-        "build-prod": "webpack --mode=production",
-        "watch": "webpack --watch",
+        "start": "webpack-dev-server --config webpack.dev.js --open --https --port 30443",
+        "build": "webpack --config webpack.dev.js",
+        "build-prod": "webpack --config webpack.prod.js",
+        "watch": "webpack --config webpack.dev.js --watch",
         "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
         "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
     },
