--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "recharts": "^1.8.5",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "terser-webpack-plugin": "^5.0.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -48,6 +49,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/recharts": "^1.8.16",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
