--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-  "name": "front",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "webpack-dev-server --open --https --port 30443",
-    "build": "webpack",
-    "build-prod": "webpack --mode=production",
-    "watch": "webpack --watch",
-    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
-    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
-  },
-  "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@reduxjs/toolkit": "^1.4.0",
-    "axios": "^0.20.0",
-    "classnames": "^2.2.6",
-    "date-fns": "^2.16.1",
-    "dotenv-webpack": "^6.0.0",
-    "google-map-react": "^2.1.9",
-    "query-string": "^6.13.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.12.2",
-    "react-redux": "^7.2.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "recharts": "^1.8.5",
-    "redux": "^4.0.5",
-    "terser-webpack-plugin": "^5.0.3"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.10",
-    "@types/date-fns": "^2.6.0",
-    "@types/dotenv-webpack": "^5.0.0",
-    "@types/google-map-react": "^2.1.0",
-    "@types/node": "^14.6.0",
-    "@types/query-string": "^6.3.0",
-    "@types/react": "^16.9.47",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/recharts": "^1.8.16",
-    "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/webpack-merge": "^4.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "eslint": "^7.9.0",
-    "eslint-plugin-react": "^7.20.6",
-    "prettier": "^2.1.1",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.3"
-  }
+    "name": "front",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "webpack-dev-server --config webpack.dev.js --open --https --port 30443",
+        "build": "webpack --config webpack.dev.js",
+        "build-prod": "webpack --config webpack.prod.js",
+        "watch": "webpack --config webpack.dev.js --watch",
+        "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
+    },
+    "dependencies": {
+        "@date-io/date-fns": "^1.3.13",
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@material-ui/pickers": "^3.2.10",
+        "@reduxjs/toolkit": "^1.4.0",
+        "axios": "^0.20.0",
+        "classnames": "^2.2.6",
+        "date-fns": "^2.16.1",
+        "dotenv-webpack": "^6.0.0",
+        "google-map-react": "^2.1.9",
+        "query-string": "^6.13.2",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-helmet": "^6.1.0",
+        "react-hook-form": "^6.12.2",
+        "react-redux": "^7.2.1",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "recharts": "^1.8.5",
+        "redux": "^4.0.5",
+        "terser-webpack-plugin": "^4.2.3"
+    },
+    "devDependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/classnames": "^2.2.10",
+        "@types/date-fns": "^2.6.0",
+        "@types/dotenv-webpack": "^5.0.0",
+        "@types/google-map-react": "^2.1.0",
+        "@types/node": "^14.6.0",
+        "@types/query-string": "^6.3.0",
+        "@types/react": "^16.9.47",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-helmet": "^6.1.0",
+        "@types/react-redux": "^7.1.9",
+        "@types/react-router": "^5.1.8",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/recharts": "^1.8.16",
+        "@types/terser-webpack-plugin": "^5.0.2",
+        "@types/webpack-merge": "^4.1.5",
+        "@typescript-eslint/eslint-plugin": "^4.1.1",
+        "@typescript-eslint/parser": "^4.1.1",
+        "eslint": "^7.9.0",
+        "eslint-plugin-react": "^7.20.6",
+        "prettier": "^2.1.1",
+        "ts-loader": "^8.0.3",
+        "typescript": "^4.0.2",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^5.7.3"
+    }
 }
