--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@types/date-fns": "^2.6.0",
         "@types/dotenv-webpack": "^5.0.0",
         "@types/google-map-react": "^2.1.0",
+        "@types/jest": "^26.0.19",
         "@types/node": "^14.6.0",
         "@types/query-string": "^6.3.0",
         "@types/react": "^16.9.47",
@@ -55,6 +56,7 @@
         "@typescript-eslint/parser": "^4.1.1",
         "eslint": "^7.9.0",
         "eslint-plugin-react": "^7.20.6",
+        "jest": "^26.6.3",
         "prettier": "^2.1.1",
         "ts-loader": "^8.0.3",
         "typescript": "^4.0.2",
