--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "eslint-plugin-react": "^7.20.6",
         "jest": "^26.6.3",
         "prettier": "^2.1.1",
+        "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.3",
         "typescript": "^4.0.2",
         "webpack": "^4.44.1",
