--- a/package.json
+++ b/package.json
@@ -8,7 +8,27 @@
         "build-prod": "webpack --config webpack.prod.js",
         "watch": "webpack --config webpack.dev.js --watch",
         "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
-        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'"
+        "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+        "test": "jest"
+    },
+    "jest": {
+        "globals": {
+            "ts-jest": {
+                "tsconfig": "tsconfig.json"
+            }
+        },
+        "transform": {
+            "^.+\\.(ts|tsx)$": "ts-jest"
+        },
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ],
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts?|tsx?)$"
     },
     "dependencies": {
         "@date-io/date-fns": "^1.3.13",
