--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,5 @@ IMAGES_BASEURL = https://localhost:1443
 X_NAZOLOG_TOKEN = fkkaASjsGelGmmrRtcaGytkEwlLLBcCDioeSA
 
 GOOGLE_MAPS_API_KEY = AIzaSyDzMtTX-GFM9hzC-D5N19gZaWHTMjU2wSo
+
+DATA_AD_CLIENT = 
