--- a/.env.prod
+++ b/.env.prod
@@ -3,3 +3,5 @@ IMAGES_BASEURL = https://images.mystery-logger.com
 X_NAZOLOG_TOKEN = fkkaASjsGelGmmrRtcaGytkEwlLLBcCDioeSA
 
 GOOGLE_MAPS_API_KEY = AIzaSyDzMtTX-GFM9hzC-D5N19gZaWHTMjU2wSo
+
+DATA_AD_CLIENT = ca-pub-9595945347617704
