--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,7 @@
 API_BASEURL = https://localhost:1443
 IMAGES_BASEURL = https://localhost:1443
 X_NAZOLOG_TOKEN = fkkaASjsGelGmmrRtcaGytkEwlLLBcCDioeSA
+NODE_ENV = development
 
 GOOGLE_MAPS_API_KEY = AIzaSyDzMtTX-GFM9hzC-D5N19gZaWHTMjU2wSo
 
