--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 API_BASEURL = https://api.mystery-logger.com
 IMAGES_BASEURL = https://images.mystery-logger.com
 X_NAZOLOG_TOKEN = fkkaASjsGelGmmrRtcaGytkEwlLLBcCDioeSA
+NODE_ENV = production
 
 GOOGLE_MAPS_API_KEY = AIzaSyDzMtTX-GFM9hzC-D5N19gZaWHTMjU2wSo
 
